--- a/gradle.properties
+++ b/gradle.properties
@@ -37,7 +37,8 @@ kapt.include.compile.classpath=false
 ########################################################
 org.gradle.daemon=false
 org.gradle.daemon.performance.enable-monitoring=false
-org.gradle.jvmargs=-Xms4048m -Xmx6096m -XX:ReservedCodeCacheSize=2024m -XX:ReservedCodeCacheSize=440m -Dfile.encoding=UTF-8
+#org.gradle.jvmargs=-Xms4048m -Xmx6096m -XX:ReservedCodeCacheSize=2024m -XX:ReservedCodeCacheSize=440m -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xms4048m -Xmx4048m -XX:ReservedCodeCacheSize=2024m -XX:ReservedCodeCacheSize=440m -Dfile.encoding=UTF-8
 #parallel开启会提升编译速度,但是会增加内存消耗,各位同学按自己需求更改
 org.gradle.parallel=true
 android.useDeprecatedNdk=true
