--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -18,6 +18,13 @@ jobs:
         with:
           java-version: 17
           distribution: 'adopt'
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+
+      - name: run macli picker
+        run: pip install macli && macli picker -sbp source -v debug
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Build with Gradle
