--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -23,6 +23,8 @@ jobs:
         with:
           python-version: '3.10'
 
+      - name: echo local.properties
+        run: echo "activeBuildVariant=debug" >> local.properties
       - name: run macli picker
         run: pip install macli && macli picker -sbp source -v debug
       - name: Grant execute permission for gradlew
