--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -38,22 +38,22 @@ jobs:
           name: App.apk
           path: app/build/outputs/apk/debug/app-debug.apk
 
-  qodana:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      pull-requests: write
-      checks: write
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          ref: ${{ github.event.pull_request.head.sha }}  # to check out the actual pull request commit, not the merge commit
-          fetch-depth: 0  # a full history is required for pull request analysis
-      - name: 'Qodana Scan'
-        uses: JetBrains/qodana-action@v2024.1
-        with:
-          pr-mode: false
-        env:
-          QODANA_TOKEN: ${{ secrets.QODANA_TOKEN_411517790 }}
-          QODANA_ENDPOINT: 'https://qodana.cloud'
+#  qodana:
+#    runs-on: ubuntu-latest
+#    permissions:
+#      contents: write
+#      pull-requests: write
+#      checks: write
+#    steps:
+#      - uses: actions/checkout@v3
+#        with:
+#          ref: ${{ github.event.pull_request.head.sha }}  # to check out the actual pull request commit, not the merge commit
+#          fetch-depth: 0  # a full history is required for pull request analysis
+#      - name: 'Qodana Scan'
+#        uses: JetBrains/qodana-action@v2024.1
+#        with:
+#          pr-mode: false
+#        env:
+#          QODANA_TOKEN: ${{ secrets.QODANA_TOKEN_411517790 }}
+#          QODANA_ENDPOINT: 'https://qodana.cloud'
   
