--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,13 @@
 [versions]
+compileSdkVersion = "34"
+buildToolsVersion = "31.0.0"
+#19:kk,21:L,23:M,24:N,26:O,28:P,29:Q,30:R
+minSdkVersion = "23"
+targetSdkVersion = "34"
+versionCode = "2"
+versionName = "2.0.0"
+ibc="1.6.1"
+jacoco = "0.8.7"
 accompanist = "0.34.0"
 androidDesugarJdkLibs = "2.0.4"
 # AGP and tools should be updated together
@@ -42,7 +51,6 @@ googleOss = "17.0.1"
 googleOssPlugin = "0.10.6"
 hilt = "2.51.1"
 hiltExt = "1.1.0"
-jacoco = "0.8.7"
 junit4 = "4.13.2"
 kotlin = "2.0.0"
 kotlinxCoroutines = "1.8.0"
@@ -61,14 +69,9 @@ room = "2.6.1"
 secrets = "2.0.1"
 truth = "1.4.2"
 turbine = "1.1.0"
-arouter = "1.3.2"
-wrouter="1.2.1"
-ibc="1.6.1"
 navigationFragmentKtx = "2.6.0"
 navigationUiKtx = "2.6.0"
 material = "1.11.0"
-versionCode="2"
-versionName="2.0.0"
 junit = "1.2.1"
 glide ="4.16.0"
 leanback = "1.0.0"
@@ -195,6 +198,7 @@ gms = { id = "com.google.gms.google-services", version.ref = "gmsPlugin" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 module-graph = { id = "com.jraska.module.graph.assertion", version.ref = "moduleGraph" }
