--- a/gradle.properties
+++ b/gradle.properties
@@ -46,7 +46,7 @@ android.useDeprecatedNdk=true
 org.gradle.caching=false
 #android.enableR8.fullMode=false
 ########################################################
-useJamesfChenSnapshots = true
+useElectrolytejSnapshots=true
 applicationId=com.electrolytej.spacecraft
 keyAlias=123456
 keyPassword=123456
