--- a/modules/ad-bundle/src/main/AndroidManifest.xml
+++ b/modules/ad-bundle/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:protectionLevel="signature" />
 
     <uses-permission android:name="${applicationId}.openadsdk.permission.TT_PANGOLIN" />
-
+    <uses-permission android:name="android.permission.HIGH_SAMPLING_RATE_SENSORS"/>
 
     <!--可选权限-->
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
@@ -31,4 +31,29 @@
 
     <!-- 穿山甲3400版本新增：建议添加“query_all_package”权限，穿山甲将通过此权限在Android R系统上判定广告对应的应用是否在用户的app上安装，避免投放错误的广告，以此提高用户的广告体验。若添加此权限，需要在您的用户隐私文档中声明！ -->
     <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+
+   <application>
+       <!--    <meta-data-->
+       <!--        android:name="com.google.ar.core"-->
+       <!--        android:value="optional" />-->
+       <activity
+           android:name="com.electrolytej.ad.page.shake.ShakeActivity"
+           android:exported="true"
+           android:theme="@style/Theme.AppCompat.Light"
+           android:screenOrientation="portrait">
+       </activity>
+       <activity
+           android:name="com.electrolytej.ad.page.shake.Shake2Activity"
+           android:exported="true"
+           android:theme="@style/Theme.AppCompat.Light"
+           android:screenOrientation="portrait">
+       </activity>
+       <activity
+           android:name="com.electrolytej.ad.page.shake.Shake3Activity"
+           android:exported="true"
+           android:theme="@style/Theme.AppCompat.Light"
+           android:screenOrientation="portrait">
+       </activity>
+   </application>
 </manifest>
