--- a/modules/main-bundle/src/main/AndroidManifest.xml
+++ b/modules/main-bundle/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
             android:exported="true"
             android:launchMode="singleTop"
             android:theme="@style/HomeTheme"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan">
             <!--            android:theme="@style/HomeTheme"-->
             <intent-filter>
