--- a/modules/livestreaming-bundle/build.gradle
+++ b/modules/livestreaming-bundle/build.gradle
@@ -9,6 +9,10 @@ android {
                 cppFlags "-std=c++14"
                 arguments "-DANDROID_STL=c++_shared", '-DANDROID_TOOLCHAIN=clang'
             }
+
+        }
+        ndk {
+            abiFilters 'armeabi-v7a', 'arm64-v8a'
         }
     }
     externalNativeBuild {
