--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,9 +37,6 @@ android {
 //        multiDexKeepProguard file('multiDexKeep.pro')
         applicationId rootProject.applicationId
         testApplicationId "${rootProject.applicationId}.test"
-        ndk {
-            abiFilters 'armeabi-v7a', 'arm64-v8a'
-        }
         testOptions.unitTests.includeAndroidResources = true
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
@@ -214,6 +211,8 @@ android {
         pickFirst 'lib/arm64-v8a/libc++_shared.so'
         pickFirst 'lib/armeabi-v7a/libwechatbacktrace.so'
         pickFirst 'lib/arm64-v8a/libwechatbacktrace.so'
+        pickFirst 'lib/armeabi-v7a/libfbjni.so'
+        pickFirst 'lib/arm64-v8a/libfbjni.so'
     }
     //想要使用dataBinding一定要在app主模块配置，其他lib模块配置不好使
     buildFeatures {
@@ -239,10 +238,11 @@ dependencies {
     project.depsConfig("implementation", "hotel-bundle2")
     project.depsConfig("implementation", "hotel-foundation")
     project.depsConfig("implementation", "ad-bundle")
-    project.depsConfig("implementation", "feeds-module")
-    project.depsConfig("implementation", "account-module")
+    project.depsConfig("implementation", "feeds-bundle")
+    project.depsConfig("implementation", "account-bundle")
     project.depsConfig("implementation", "codescanner-qrcode")
-    project.depsConfig("implementation", "update-module")
+    project.depsConfig("implementation", "update-bundle")
+    project.depsConfig("implementation", "livestreaming-bundle")
     implementation project.moduleify("framework-base")
 //    implementation project.moduleify("framework-mockserver")
 }
