--- a/modules/livestreaming-bundle/src/main/AndroidManifest.xml
+++ b/modules/livestreaming-bundle/src/main/AndroidManifest.xml
@@ -10,27 +10,16 @@
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
-    <application
-        >
+    <application>
         <activity
             android:name="com.electrolytej.livestreaming.GLActivity"
             android:exported="true"
             android:screenOrientation="portrait"
-            tools:ignore="LockedOrientationActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            tools:ignore="LockedOrientationActivity" />
         <activity
             android:name="com.electrolytej.livestreaming.VKActivity"
             android:exported="true"
             android:screenOrientation="portrait"
-            tools:ignore="LockedOrientationActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-                <action android:name="android.intent.action.DEFAULT" />
-            </intent-filter>
-        </activity>
+            tools:ignore="LockedOrientationActivity" />
     </application>
 </manifest>
