--- a/modules/ad-bundle/src/main/AndroidManifest.xml
+++ b/modules/ad-bundle/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
     <uses-permission android:name="android.permission.EXPAND_STATUS_BAR" />
 
     <!-- 穿山甲3400版本新增：建议添加“query_all_package”权限，穿山甲将通过此权限在Android R系统上判定广告对应的应用是否在用户的app上安装，避免投放错误的广告，以此提高用户的广告体验。若添加此权限，需要在您的用户隐私文档中声明！ -->
-    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"/>
+<!--    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"/>-->
     <uses-permission android:name="android.permission.CAMERA" />
 
    <application>
