--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,7 +4,6 @@ compileSdkVersion = "35"
 buildToolsVersion = "31.0.0"
 #19:kk,21:L,23:M,24:N,26:O,28:P,29:Q,30:R
 minSdkVersion = "24"
-picasso = "2.71828"
 targetSdkVersion = "35"
 versionCode = "2"
 versionName = "2.0.0"
@@ -41,7 +40,10 @@ androidxTracing = "1.3.0-alpha02"
 androidxUiAutomator = "2.2.0"
 androidxWindowManager = "1.3.0"
 androidxWork = "2.9.0"
+picasso = "2.71828"
 coil = "2.7.0"
+glide = "4.16.0"
+fresco = "3.6.0"
 dependencyGuard = "0.5.0"
 firebaseBom = "33.1.2"
 firebaseCrashlyticsPlugin = "3.0.2"
@@ -68,21 +70,26 @@ protobuf = "4.26.0"
 protobufPlugin = "0.9.4"
 retrofit = "2.9.0"
 retrofitKotlinxSerializationJson = "1.0.0"
+room = "2.7.0"
 robolectric = "4.11.1"
 roborazzi = "1.7.0"
-room = "2.7.0"
 secrets = "2.0.1"
 truth = "1.4.2"
 turbine = "1.1.0"
 material = "1.11.0"
 junit = "1.2.1"
-glide = "4.16.0"
+
 leanback = "1.0.0"
 tvFoundation = "1.0.0-alpha07"
 tvMaterial = "1.0.0"
 roomCompiler = "2.7.0"
 media3 = "1.6.1"
 [libraries]
+androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "androidxActivity" }
+androidx-browser = { group = "androidx.browser", name = "browser", version.ref = "androidxBrowser" }
+androidx-window-core = { group = "androidx.window", name = "window-core", version.ref = "androidxWindowManager" }
+androidx-work-ktx = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "androidxWork" }
+androidx-work-testing = { group = "androidx.work", name = "work-testing", version.ref = "androidxWork" }
 androidx-core-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "androidxCoreSplashscreen" }
 androidx-lifecycle-runtime = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "androidxLifecycle" }
 androidx-lifecycle-runtime-compose = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "androidxLifecycle" }
@@ -172,8 +179,6 @@ room-testing = { group = "androidx.room", name = "room-testing", version.ref = "
 dataStore = { group = "androidx.datastore", name = "datastore", version.ref = "dataStore" }
 
 #网络库
-picasso = { module = "com.squareup.picasso:picasso", version.ref = "picasso" }
-picasso-pollexor = { module = "com.squareup.picasso:picasso-pollexor", version.ref = "picasso" }
 retrofit-core = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
 retrofit-kotlin-serialization = { group = "com.jakewharton.retrofit", name = "retrofit2-kotlinx-serialization-converter", version.ref = "retrofitKotlinxSerializationJson" }
 okhttp-logging = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okhttpBom" }
@@ -182,14 +187,23 @@ okhttp-tls = { group = "com.squareup.okhttp3", name = "okhttp-tls", version.ref 
 #okhttp = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okhttpBom" }
 
 #图库
+picasso = { module = "com.squareup.picasso:picasso", version.ref = "picasso" }
+picasso-pollexor = { module = "com.squareup.picasso:picasso-pollexor", version.ref = "picasso" }
 glide-core = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 glide-recyclerview = { module = "com.github.bumptech.glide:recyclerview-integration", version.ref = "glide" }
 glide-okhttp3 = { module = "com.github.bumptech.glide:okhttp3-integration", version.ref = "glide" }
 glide-ksp = { module = "com.github.bumptech.glide:ksp", version.ref = "glide" }
+glide-compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "glide" }
 #coil-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coilCompose" }
 coil = { group = "io.coil-kt", name = "coil", version.ref = "coil" }
 coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
 coil-svg = { group = "io.coil-kt", name = "coil-svg", version.ref = "coil" }
+fresco = { module = "com.facebook.fresco:fresco", version.ref = "fresco" }
+fresco-webp = { module = "com.facebook.fresco:webpsupport", version.ref = "fresco" }
+fresco-animated-gif = { module = "com.facebook.fresco:animated-gif", version.ref = "fresco" }
+fresco-animated-webp = { module = "com.facebook.fresco:animated-webp", version.ref = "fresco" }
+fresco-okhttp3 = { module = "com.facebook.fresco:imagepipeline-okhttp3", version.ref = "fresco" }
+
 #音视频库
 androidx-media3-ui = { module = "androidx.media3:media3-ui-compose", version.ref = "media3" }
 androidx-media3-exoplayer = { module = "androidx.media3:media3-exoplayer", version.ref = "media3" }
@@ -200,7 +214,8 @@ lint-checks = { group = "com.android.tools.lint", name = "lint-checks", version.
 lint-tests = { group = "com.android.tools.lint", name = "lint-tests", version.ref = "androidTools" }
 androidx-benchmark-macro = { group = "androidx.benchmark", name = "benchmark-macro-junit4", version.ref = "androidxMacroBenchmark" }
 androidx-metrics = { group = "androidx.metrics", name = "metrics-performance", version.ref = "androidxMetrics" }
-
+androidx-tracing-ktx = { group = "androidx.tracing", name = "tracing-ktx", version.ref = "androidxTracing" }
+androidx-profileinstaller = { group = "androidx.profileinstaller", name = "profileinstaller", version.ref = "androidxProfileinstaller" }
 
 #firebase
 firebase-analytics = { group = "com.google.firebase", name = "firebase-analytics-ktx" }
@@ -209,37 +224,25 @@ firebase-cloud-messaging = { group = "com.google.firebase", name = "firebase-mes
 firebase-crashlytics = { group = "com.google.firebase", name = "firebase-crashlytics-ktx" }
 firebase-performance = { group = "com.google.firebase", name = "firebase-perf-ktx" }
 
-accompanist-permissions = { group = "com.google.accompanist", name = "accompanist-permissions", version.ref = "accompanist" }
-android-desugarJdkLibs = { group = "com.android.tools", name = "desugar_jdk_libs", version.ref = "androidDesugarJdkLibs" }
-androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "androidxActivity" }
-
-androidx-browser = { group = "androidx.browser", name = "browser", version.ref = "androidxBrowser" }
-
-
-
-androidx-profileinstaller = { group = "androidx.profileinstaller", name = "profileinstaller", version.ref = "androidxProfileinstaller" }
+#test
 androidx-test-core = { group = "androidx.test", name = "core", version.ref = "androidxTestCore" }
 androidx-test-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "androidxEspresso" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junit" }
 androidx-test-ext = { group = "androidx.test.ext", name = "junit-ktx", version.ref = "androidxTestExt" }
+junit = { module = "junit:junit", version.ref = "junit4" }
 androidx-test-rules = { group = "androidx.test", name = "rules", version.ref = "androidxTestRules" }
 androidx-test-runner = { group = "androidx.test", name = "runner", version.ref = "androidxTestRunner" }
 androidx-test-uiautomator = { group = "androidx.test.uiautomator", name = "uiautomator", version.ref = "androidxUiAutomator" }
-androidx-tracing-ktx = { group = "androidx.tracing", name = "tracing-ktx", version.ref = "androidxTracing" }
-androidx-window-core = { group = "androidx.window", name = "window-core", version.ref = "androidxWindowManager" }
-androidx-work-ktx = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "androidxWork" }
-androidx-work-testing = { group = "androidx.work", name = "work-testing", version.ref = "androidxWork" }
-
-google-oss-licenses = { group = "com.google.android.gms", name = "play-services-oss-licenses", version.ref = "googleOss" }
-google-oss-licenses-plugin = { group = "com.google.android.gms", name = "oss-licenses-plugin", version.ref = "googleOssPlugin" }
-
-javax-inject = { module = "javax.inject:javax.inject", version = "1" }
-
 robolectric = { group = "org.robolectric", name = "robolectric", version.ref = "robolectric" }
 roborazzi = { group = "io.github.takahirom.roborazzi", name = "roborazzi", version.ref = "roborazzi" }
 truth = { group = "com.google.truth", name = "truth", version.ref = "truth" }
 turbine = { group = "app.cash.turbine", name = "turbine", version.ref = "turbine" }
-junit = { module = "junit:junit", version.ref = "junit4" }
+
+javax-inject = { module = "javax.inject:javax.inject", version = "1" }
+android-desugarJdkLibs = { group = "com.android.tools", name = "desugar_jdk_libs", version.ref = "androidDesugarJdkLibs" }
+accompanist-permissions = { group = "com.google.accompanist", name = "accompanist-permissions", version.ref = "accompanist" }
+google-oss-licenses = { group = "com.google.android.gms", name = "play-services-oss-licenses", version.ref = "googleOss" }
+google-oss-licenses-plugin = { group = "com.google.android.gms", name = "oss-licenses-plugin", version.ref = "googleOssPlugin" }
 
 # Dependencies of the included build-logic
 android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "androidGradlePlugin" }
