--- a/base/build.gradle
+++ b/base/build.gradle
@@ -34,6 +34,8 @@ android {
 //                "-fexceptions", "-frtti", "DHAVE_CONFIG_H", "-Wno-sign-compare","-std=gnu++11"
                 abiFilters "arm64-v8a", "armeabi-v7a"
             }
+            consumerProguardFiles("consumer-rules.pro")
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         javaCompileOptions.annotationProcessorOptions.arguments = [
                 "room.schemaLocation"  : "$projectDir/schemas",
@@ -185,18 +187,16 @@ dependencies {
     api(libs.glide.recyclerview)
     api(libs.glide.okhttp3)
     ksp(libs.glide.ksp)
-//    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
-
-    api "com.facebook.fresco:fresco:${FRESCO_VERSION}"
-    api "com.facebook.fresco:animated-gif:${FRESCO_GIF_VERSION}"
-    // 支持 WebP （静态图+动图），需要添加
-    api "com.facebook.fresco:animated-webp:${FRESCO_WEBP_VERSION}"
-    api "com.facebook.fresco:webpsupport:${FRESCO_WEBP_VERSION}"
-    api "com.facebook.fresco:imagepipeline-okhttp3:${FRESCO_OKHTTP3_VERSION}"
+    annotationProcessor(libs.glide.compiler)
+    api(libs.fresco)
+    api(libs.fresco.animated.webp)
+    api(libs.fresco.animated.gif)
+    api(libs.fresco.webp)
+    api(libs.fresco.okhttp3)
+    api("com.facebook.infer.annotation:infer-annotation:0.18.0")
     api libs.picasso
     api libs.picasso.pollexor
 
-    api "com.caverock:androidsvg:${ANDROIDSVG_VERSION}"
     api(libs.coil.compose)
     /**
      * ===============================image end=============================
