--- a/base/build.gradle
+++ b/base/build.gradle
@@ -117,16 +117,17 @@ dependencies {
      * ===============================http start=============================
      */
     testImplementation files('libs/jsoup-1.12.1.jar')
-    //    api project(path: ':mockserver')
 //    api 'com.squareup.okhttp3:okhttp:5.0.0-alpha.2'
     //    api 'com.android.volley:volley:1.1.1'
-    api "com.facebook.stetho:stetho-okhttp3:${OKHTTP_STETHO_VERSION}"
+    api "com.facebook.stetho:stetho-okhttp3:1.5.1"
     api(libs.okhttp.logging)
     api(libs.okhttp.tls)
     //restful
     api 'io.github.jamesfchen:retrofit:1.0.0'
-//    api "com.squareup.retrofit2:adapter-rxjava3:${RETROFIT_VERSION}"
-//    api "com.squareup.retrofit2:converter-wire:${RETROFIT_VERSION}"
+//    api "com.squareup.retrofit2:adapter-rxjava3:2.11.0"
+    api("com.squareup.retrofit2:converter-wire:2.11.0"){
+        exclude group: 'com.squareup.retrofit2', module: 'retrofit'
+    }
     api("com.squareup.retrofit2:converter-gson:2.11.0") {
         exclude group: 'com.squareup.retrofit2', module: 'retrofit'
     }
