--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -38,22 +38,39 @@ jobs:
           name: App.apk
           path: app/build/outputs/apk/debug/app-debug.apk
 
-#  qodana:
-#    runs-on: ubuntu-latest
-#    permissions:
-#      contents: write
-#      pull-requests: write
-#      checks: write
-#    steps:
-#      - uses: actions/checkout@v3
-#        with:
-#          ref: ${{ github.event.pull_request.head.sha }}  # to check out the actual pull request commit, not the merge commit
-#          fetch-depth: 0  # a full history is required for pull request analysis
-#      - name: 'Qodana Scan'
-#        uses: JetBrains/qodana-action@v2024.1
-#        with:
-#          pr-mode: false
-#        env:
-#          QODANA_TOKEN: ${{ secrets.QODANA_TOKEN_411517790 }}
-#          QODANA_ENDPOINT: 'https://qodana.cloud'
+  #  qodana:
+  #    runs-on: ubuntu-latest
+  #    permissions:
+  #      contents: write
+  #      pull-requests: write
+  #      checks: write
+  #    steps:
+  #      - uses: actions/checkout@v3
+  #        with:
+  #          ref: ${{ github.event.pull_request.head.sha }}  # to check out the actual pull request commit, not the merge commit
+  #          fetch-depth: 0  # a full history is required for pull request analysis
+  #      - name: 'Qodana Scan'
+  #        uses: JetBrains/qodana-action@v2024.1
+  #        with:
+  #          pr-mode: false
+  #        env:
+  #          QODANA_TOKEN: ${{ secrets.QODANA_TOKEN_411517790 }}
+  #          QODANA_ENDPOINT: 'https://qodana.cloud'
+  DeepCode Analysis:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup jdk-17
+        uses: actions/setup-java@main
+        with:
+          java-version: 17
+          distribution: 'adopt'
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+      - name: Run DeepCode analysis
+        uses: deepcode-ai/action@v1
+      #          with:
+      #            api-token: ${{ secrets.DEEPCODE_TOKEN }}  # 公共仓库无需 token
   
