--- a/base/build.gradle
+++ b/base/build.gradle
@@ -380,10 +380,10 @@ dependencies {
     api("androidx.webkit:webkit:1.6.0")
     api 'com.tencent.tbs:tbssdk:44286'
 
-    debugApi 'com.github.eleme.UETool:uetool:1.3.4'
-    debugApi 'com.github.eleme.UETool:uetool-base:1.3.4'
-    releaseApi'com.github.eleme.UETool:uetool-no-op:1.3.4'
-    debugApi 'com.github.eleme.UETool:uetool-fresco:1.3.4'// if you want to show more attrs about Fresco's DraweeView
+//    debugApi 'com.github.eleme.UETool:uetool:1.3.4'
+//    debugApi 'com.github.eleme.UETool:uetool-base:1.3.4'
+//    releaseApi'com.github.eleme.UETool:uetool-no-op:1.3.4'
+//    debugApi 'com.github.eleme.UETool:uetool-fresco:1.3.4'// if you want to show more attrs about Fresco's DraweeView
 //    def lastversion = "3.5.0"
 //    debugImplementation "io.github.didi.dokit:dokitx:${lastversion}"//核心模块
 //    debugImplementation "io.github.didi.dokit:dokitx-ft:${lastversion}"//文件同步模块
