--- a/script/ui_compose.gradle
+++ b/script/ui_compose.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation(composeBom)
     androidTestImplementation(composeBom)
     implementation(libs.compose.animation)
+    implementation(libs.compose.runtime)
     implementation(libs.compose.runtime.livedata)
     implementation(libs.androidx.lifecycle.viewModelCompose)
     implementation(libs.androidx.lifecycle.runtime.compose)
@@ -48,11 +49,13 @@ dependencies {
     implementation(libs.compose.material3)
     implementation(libs.compose.material.iconsExtended)
     implementation(libs.compose.material.core)
+    implementation(libs.compose.ui)
     implementation(libs.compose.ui.tooling.preview)
     debugImplementation(libs.compose.ui.tooling)
     implementation(libs.compose.ui.util)
     implementation(libs.compose.ui.viewbinding)
     implementation(libs.compose.ui.googlefonts)
+    implementation(libs.compose.ui.graphics)
     debugImplementation(libs.compose.ui.test.manifest)
     androidTestApi(libs.compose.ui.test.junit4)
 
